--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "reactjs-swagger-ui",
+  "name": "reactjs-custom-swagger-ui",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "swagger-ui": "3.32.5"
   },
   "devDependencies": {
     "typescript": "3.8.3"
